--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@ licenselink = ""
 description = "Shared Bulma Theme"
 homepage = "https://citra-emu.org/"
 tags = []
-features = ["", ""]
+features = []
 min_version = 0.16
 
 [author]
